# Camillion_Claude_RL_model

./: .gitignore  0_JARVIS_COCKPIT.html  BUILD_PLAN.md  CLAUDE.md  HANDOFF.md  HANDOFF_TRAINING_JARVIS.md  JORDAN_PRINCIPLES.md  OPERATOR_PROFILE.md  PSYCHOLOGY.md  README.md  TRAINING_REQUIREMENTS.md  TRAINING_TASKS.md  TRAINING_TUNING_TODO.md  go_live.py  jarvis_bridge.py  pyproject.toml  requirements-jarvis.txt  run_training.py
NOTEBO~1/: Camillion_One_Click_Train.ipynb
audit_results/: ASSUMPTIONS.md
config/: asset_specs.py  constants.py  ftmo_config.py  training_speed_config.py  variables.py
data/: README.md
docs/: ALPHAS.md  BARBERSHOP_MODE.md  DEPENDENCY_MAP.md  ENVIRONMENT_STATE.md  FTMO_AND_FREE_MODE.md  FTMO_REPO_AUDIT.md  HANDOFF.md  JARVIS_GUIDE.md  JARVIS_LIVE_WIRING.md  JARVIS_UI_DESIGN.md  JAX_GPU_TPU_TRAINER_BLUEPRINT.md  OBSERVATION_CONTRACT.md  OPERATOR_CONTROLS.md  PHASE1_REPORT.md  POLICY_DOCTOR.md  PROJECT_SPEC.md  READINESS_AUDIT.md  REPO_GUIDE.md  TRAINING_INSTRUCTIONS.md  TRAINING_LEDGER.md  TRAINING_SPEED_PLAN.md  TROUBLESHOOTING.md  UPDATE_LOG.md
jax_tpu/: PLAN.md  README.md  __init__.py  export_to_pytorch.py  jax_checkpoint.py  jax_config.py  jax_env.py  jax_eval.py  jax_ftmo.py  jax_indicators.py  jax_obs_blocks.py  jax_portfolio_env.py  jax_ppo.py  jax_progress.py  jax_proof.py  jax_static_features.py  jax_trainer.py
jax_tpu/notebooks/: Camillion_JAX_TPU_Train.ipynb
jax_tpu/tests/: __init__.py  conftest.py  deep_test.py  run_parity.py  test_jax_indicators.py  test_jax_parity.py  test_jax_portfolio_parity.py  test_mixed_ppo.py  test_proof_harness.py
notebooks/: Camillion_OneClick_Proofs.ipynb  Camillion_One_Click_Train.ipynb  Camillion_Single_Symbol_Train.ipynb
records/: README.md
src/account/: account_state.py  trade_history.py  win_loss_features.py
src/analysis/: __init__.py  rr_histogram.py
src/barbershop/: alpha_edge.py  day_replay.py  feature_doctor.py  policy_doctor.py  (+4 more)
tests/: __init__.py  _audit_helpers.py  conftest.py  test_add_one_alpha_shape.py  test_adx_di_alphas.py  test_alpha_accuracy_no_leakage.py  test_alpha_edge.py  test_alpha_pack.py  test_asset_specs.py  test_autotune.py  test_barbershop_screens.py  test_barbershop_smoke.py  test_bb_interactions.py  test_brackets.py  test_cache_no_leakage.py  test_cross_asset.py  test_csv_loader.py  test_daily_dd_gauge.py  test_daily_report.py  test_dual_movement_filter.py  test_env_5k_no_nan.py  test_env_checker.py  test_env_governance.py  test_exit_band.py  test_feature_cache.py  test_ftmo_free_mode.py  test_full_audit.py  test_gravity_alpha.py  test_hug_pressure.py  test_indicator_shapes.py  test_jarvis_bridge.py  test_momentum_scores.py  test_multi_symbol_training.py  test_no_double_count.py  test_observation_contract.py  test_open_gate.py  test_orb_ny_breakout.py  test_policy_doctor.py  test_policy_eval_introspection.py  test_policy_introspection.py  (+23 more)
tools/: run_full_audit.py  run_tests.py
(+111 files in other folders)
