# WHEN 2026-06-21 | WHO Claude for Monty | WHY package + dependency manifest
# WHERE repo root | HOW PEP 621 metadata; Phase-0 core is numpy/pandas only.
# DEPENDS_ON (none) | USED_BY pip / Colab install cell
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "camillion-claude-rl-model"
version = "0.0.1"
description = "Modular RL forex framework: strategy alphas combined by an RL agent under FTMO rules."
requires-python = ">=3.10"
# Phase-0 core (enough to import the package and run the shape tests):
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
]

[project.optional-dependencies]
# Phase-1 (indicators + fast training). TA-Lib needs the C lib; on Colab use
#   apt-get install -y ta-lib  (or the prebuilt wheel) then  pip install TA-Lib
indicators = ["TA-Lib>=0.4.28", "pyarrow>=14.0"]
train = ["gymnasium>=0.29", "stable-baselines3>=2.3", "torch>=2.2"]
# JAX/TPU trainer (jax_tpu/). GPU: jax[cuda12]; TPU: jax[tpu]. See jax_tpu/PLAN.md.
jax-gpu = ["jax[cuda12]>=0.4.30", "flax>=0.8", "optax>=0.2", "onnxscript>=0.1", "onnxruntime>=1.17"]
jax-tpu = ["jax[tpu]>=0.4.30", "flax>=0.8", "optax>=0.2", "onnxscript>=0.1", "onnxruntime>=1.17"]
# Phase-2 (UI + dashboards)
ui = ["streamlit>=1.33", "plotly>=5.20"]
# Live data
mt5 = ["MetaTrader5>=5.0.45"]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["config", "src"]

[tool.pytest.ini_options]
pythonpath = ["."]
# jax_tpu/ holds the JAX/TPU trainer's parity tests; they self-skip when jax is absent
# (so `pytest -q` stays green on a CPU-only box) — see jax_tpu/tests/conftest.py.
testpaths = ["tests", "jax_tpu/tests"]
